nodes/kenaz.k8s/searxng/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: searxng
spec:
  selector:
    app: searxng
  ports:
    - name: http
      port: 80
      targetPort: http
